Fix: overflow from slider

--- a/AIAudioTalesClient/src/app/home/sidenav/sidenav.component.scss
+++ b/AIAudioTalesClient/src/app/home/sidenav/sidenav.component.scss
@@ -59,11 +59,11 @@
 .my-prof {
   display: none;
 }
-.active-link {
+// .active-link {
 
-  background-color: #f0f0f0;
-  font-weight: bold;
-}
+//   background-color: #f0f0f0;
+//   font-weight: bold;
+// }
 .mob-icons {
   display: flex;
   gap: 1rem;
